src/test/ui/feature-gates/feature-gate-sanitizer-runtime.rs
#![sanitizer_runtime] //~ ERROR the `#[sanitizer_runtime]` attribute is

fn main() {}
